bitbucket.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitbucket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  serviceName: bitbucket
  template:
    metadata:
      labels:
        app: bitbucket
    spec:
      containers:
      - name: bitbucket
        image: atlassian/bitbucket
        ports:
        - containerPort: 7990
        - containerPort: 7999
        volumeMounts:
        - name: bitbucket-data
          mountPath: /var/atlassian/application-data/bitbucket
  volumeClaimTemplates:
  - metadata:
      name: bitbucket-data
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---

apiVersion: v1
kind: Service
metadata:
  name: bitbucket
spec:
  type: ClusterIP
  selector:
    app: bitbucket
  ports:
  - name: http
    protocol: TCP
    port: 7990
    targetPort: 7990
  - name: ssh
    protocol: TCP
    port: 7999
    targetPort: 7999
